--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   flutter_svg: ^2.2.0
+  firebase_core: ^3.14.0
+  dartz: ^0.10.1
   
 
 dev_dependencies:
