--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^3.14.0
   dartz: ^0.10.1
   firebase_auth: ^5.6.0
+  flutter_bloc: ^9.1.1
   
 
 dev_dependencies:
