--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dartz: ^0.10.1
   firebase_auth: ^5.6.0
   flutter_bloc: ^9.1.1
+  get_it: ^8.0.3
+  modal_progress_hud_nsn: ^0.5.1
   
 
 dev_dependencies:
