--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^8.0.3
   modal_progress_hud_nsn: ^0.5.1
+  google_sign_in: ^6.1.5
+
   
 
 dev_dependencies:
