--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   google_sign_in: ^6.1.5
   cloud_firestore: ^5.6.9
+  skeletonizer: ^2.0.1
 
   
 
